--- a/web/other/agreementText.html
+++ b/web/other/agreementText.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title></title>
+<title>积粒网-会员服务协议</title>
 <style type="text/css">
 body,td,th {
 	font-size: 12px;
