--- a/web/other/agreementText.html
+++ b/web/other/agreementText.html
@@ -40,13 +40,14 @@ body,td,th {
   1、用户注册成为积粒网的会员之后，即刻享有积粒网提供的服务。 <br />
   2、积分或返利的结算：积粒网在收到广告主支付的佣金后，将按照网站中约定的比例或额度计入会员在积粒网的虚拟账户，会员在累计一定的积分后，可以通过积粒网兑换中心申请兑换为支付宝充值、手机费、礼品等，相关税费由会员自行向税务部门申报。 <br />
   3、返利方式：积粒网提供支付宝转账、充值手机费、兑换其他网站积分、实物礼品、购物卡等多种兑换途径，如果会员没有出现违规情况，积粒网将在收到会员的兑换申请后按照规定予以兑现。 <br />
-  4、您了解并同意，积粒网有权应政府部门（包括司法及行政部门）的要求，向其提供您在积粒网填写的注册信息和交易纪录等必要信息。如您涉嫌侵犯他人知识产权，则积粒网亦有权在初步判断涉嫌侵权行为存在的情况下，向司法部门提供您必要的身份信息。除非法律法规或相关政府部门另有要求，积粒网将在前述信息披露情况发生后及时向您发出书面通知。 </p>
+  4、积分失效：会员如果在180天内没有积累积分（包括确认中的积分）或消费积分，其积分将会全部失效。<br />
+  5、您了解并同意，积粒网有权应政府部门（包括司法及行政部门）的要求，向其提供您在积粒网填写的注册信息和交易纪录等必要信息。如您涉嫌侵犯他人知识产权，则积粒网亦有权在初步判断涉嫌侵权行为存在的情况下，向司法部门提供您必要的身份信息。除非法律法规或相关政府部门另有要求，积粒网将在前述信息披露情况发生后及时向您发出书面通知。 </p>
 <p align="left">四、积粒网服务使用规范 <br />
   在使用积粒网服务过程中，您承诺遵守以下约定： <br />
   1、会员必须保证其注册信息的正确性。 <br />
   2、如果会员提供给积粒网的资料有变更，请及时在积粒网上更新并做出相应的修改。 <br />
   3、会员不得出现恶意注册恶意点击等行为，例如：为获取积分或佣金，多次重复点击或参与某些指定的网上行为。 <br />
-  4、会员应及时使用或兑现自己的积粒网账户中的积分，自积分计入会员账户日起，积粒网有权对会员的账户内累计日期超过一年未使用的积分进行处置。 <br />
+  4、会员应及时使用或兑现自己的积粒网账户中的积分，自积分计入会员账户日起，积粒网有权对会员的账户内累计日期超过180天未使用的积分进行处置。 <br />
   5、在使用积粒网服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及积粒网各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保积粒网免于因此产生任何损失。 <br />
   6、不以虚构或欺诈的方式参加积粒网上的相关活动，不采取不正当方式制造或提高自身的信用度、等级，积分等。 <br />
   7、不对积粒网平台上的任何数据作商业性利用，包括但不限于在未经积粒网事先书面同意的情况下，以复制、传播等任何方式使用积粒网站上展示的资料。 <br />
