--- a/web/classify.html
+++ b/web/classify.html
@@ -5,13 +5,13 @@
 <meta name="keywords" content="积粒,积粒网,91积粒网,返利网,返利,返现,超级返,购物返利,商城返利,淘宝,淘宝返利,京东返利,积分,积分商城,网购返利,91jili.com">
 <meta name="description" content="积粒网，一站式积分媒体！拥有游戏体验，体验广告，购物返利，商家活动几大板块，网站的货币为米粒，在享受众多商城最优惠价格同时还可从积粒网获得不同比率的现金奖励！积粒网让你省得多，赚得也更多！">
 <title>积粒网-首页 一站式积分媒体！</title>
-<link href="{{ asset('css140307/reset.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/common.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/categorys.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/commodity.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/pageNumber.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/recommend.css') }} " rel="stylesheet" type="text/css">
-<script src="{{ asset('js140307/jquery-1.8.2.js') }}" language="javascript"></script>
+<link href="css140307/reset.css" rel="stylesheet" type="text/css">
+<link href="css140307/common.css" rel="stylesheet" type="text/css">
+<link href="css140307/categorys.css" rel="stylesheet" type="text/css">
+<link href="css140307/commodity.css" rel="stylesheet" type="text/css">
+<link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
+<link href="css140307/recommend.css" rel="stylesheet" type="text/css">
+<script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
 <div id="header">
@@ -26,7 +26,7 @@
   </div>
   <div id="headerContent">
     <div class="page clearfix">
-      <div id="logo"><a href="#"><img src="{{ asset('images140307/logo.png') }}" width="160" height="46" alt="积粒网" /></a></div>
+      <div id="logo"><a href="#"><img src="images140307/logo.png" width="160" height="46" alt="积粒网" /></a></div>
       <div id="search">
         <div class="seacherMenu"> <span>商品</span>
           <ul style="display: none;">
@@ -142,7 +142,7 @@
       <div class="shade">
         <ul class="clearfix">
           <li>
-            <dt class="image"><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="100" height="100" /></a></dt>
+            <dt class="image"><a href="#"><img src="other140307/image100.jpg" width="100" height="100" /></a></dt>
             <dd>
               <p class="title">小米手机红米(灰色)移动版红米手机！</p>
               <p class="price">￥25</p>
@@ -150,7 +150,7 @@
             </dd>
           </li>
           <li>
-            <dt class="image"><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="100" height="100" /></a></dt>
+            <dt class="image"><a href="#"><img src="other140307/image100.jpg" width="100" height="100" /></a></dt>
             <dd>
               <p class="title">小米手机红米(灰色)移动版红米手机！</p>
               <p class="price">￥25</p>
@@ -158,7 +158,7 @@
             </dd>
           </li>
           <li>
-            <dt class="image"><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="100" height="100" /></a></dt>
+            <dt class="image"><a href="#"><img src="other140307/image100.jpg" width="100" height="100" /></a></dt>
             <dd>
               <p class="title">小米手机红米(灰色)移动版红米手机！</p>
               <p class="price">￥25</p>
@@ -166,7 +166,7 @@
             </dd>
           </li>
           <li>
-            <dt class="image"><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="100" height="100" /></a></dt>
+            <dt class="image"><a href="#"><img src="other140307/image100.jpg" width="100" height="100" /></a></dt>
             <dd>
               <p class="title">小米手机红米(灰色)移动版红米手机！</p>
               <p class="price">￥25</p>
@@ -184,7 +184,7 @@
       </div>
       <ul class="module commodityUl clearfix">
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -192,7 +192,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -200,7 +200,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -208,7 +208,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -216,7 +216,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -224,7 +224,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -232,7 +232,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -240,7 +240,7 @@
           </dd>
         </li>
         <li>
-          <dt class="image"><img src="{{ asset('other140307/image100.jpg') }}" width="200" height="200" /><a class="shop">京东商城</a></dt>
+          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
           <dd class="clearfix">
             <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
             <p class="price">￥25</p>
@@ -265,9 +265,9 @@
     </div>
   </div>
 </div>
-<script src="{{ asset('js140307/common.js') }}" language="javascript"></script>
-<script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
-<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
-<script src="{{ asset('js140307/commodity.js') }}" language="javascript"></script>
+<script src="js140307/common.js" language="javascript"></script>
+<script src="js140307/categorys.js" language="javascript"></script>
+<script src="js140307/recommend.js" language="javascript"></script>
+<script src="js140307/commodity.js" language="javascript"></script>
 </body>
 </html>
