--- a/web/shopList.html
+++ b/web/shopList.html
@@ -576,7 +576,7 @@
     </div>
   </div>
   <div class="sidebar w300 fr">
-  	<div class="sidebarCommodity">
+  	<div class="sidebarRecommend">
     	<h2>别人都在买</h2>
         <ul>
         	<li class="clearfix">
