refactored the UI and added cps.html

--- a/web/classify.html
+++ b/web/classify.html
@@ -8,9 +8,10 @@
 <link href="css140307/reset.css" rel="stylesheet" type="text/css">
 <link href="css140307/common.css" rel="stylesheet" type="text/css">
 <link href="css140307/categorys.css" rel="stylesheet" type="text/css">
-<link href="css140307/commodity.css" rel="stylesheet" type="text/css">
 <link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
 <link href="css140307/recommend.css" rel="stylesheet" type="text/css">
+<link href="css140307/screen.css" rel="stylesheet" type="text/css">
+<link href="css140307/commodity930.css" rel="stylesheet" type="text/css">
 <script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
@@ -178,9 +179,9 @@
       <a class="prevBtn"></a> <a class="nextBtn"></a> </div>
     <div class="commodityList">
       <h1>宝贝列表<span>共2555件宝贝</span></h1>
-      <div class="classifyShop clearfix">
+      <div class="screen clearfix">
         <dt class="fl">商城筛选：</dt>
-        <dd class="fl"> <a class="hover" href="#">全部</a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a class="unfoldBtn">展开</a> </dd>
+        <dd class="fl w820 h28"> <a class="hover" href="#">全部</a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a class="unfoldBtn">展开</a> </dd>
       </div>
       <ul class="module commodityUl clearfix">
         <li>
@@ -268,6 +269,6 @@
 <script src="js140307/common.js" language="javascript"></script>
 <script src="js140307/categorys.js" language="javascript"></script>
 <script src="js140307/recommend.js" language="javascript"></script>
-<script src="js140307/commodity.js" language="javascript"></script>
+<script src="js140307/screen.js" language="javascript"></script>
 </body>
 </html>
