--- a/web/searchShop.html
+++ b/web/searchShop.html
@@ -10,7 +10,7 @@
 <link href="css140307/searchShop.css" rel="stylesheet" type="text/css">
 <link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
 <link href="css140307/recommend.css" rel="stylesheet" type="text/css">
-<link href="css140307/commodity.css" rel="stylesheet" type="text/css">
+<link href="css140307/screen.css" rel="stylesheet" type="text/css">
 <script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
@@ -74,10 +74,9 @@
 </div>
 <div class="pageMain page clearfix">
   <div class="main w834 fl">
-    <div class="searchShop">
       <h1>搜索关键字：京东<span>共2个结果</span></h1>
-      <div class="classify clearfix">
-        <dd class="fl">
+      <div class="screen clearfix">
+        <dd class="fl w794 h56">
           <li><a class="hover" href="#">热门商家</a></li>
           <li><a href="#"> 综合商城 </a></li>
           <li><a href="#"> 服装服饰 </a></li>
@@ -179,7 +178,6 @@
           </dd>
         </li>
       </ul>
-    </div>
     <div style="display: inline-block; width: 100%;">
       <ul class="pageNav">
         <li class="currPage"> <a href="/shopping/list?page=1">1</a> </li>
@@ -224,5 +222,6 @@
 <script src="js140307/common.js" language="javascript"></script> 
 <script src="js140307/shopList.js" language="javascript"></script> 
 <script src="js140307/recommend.js" language="javascript"></script>
+<script src="js140307/screen.js" language="javascript"></script>
 </body>
 </html>
