--- a/web/shopMore.html
+++ b/web/shopMore.html
@@ -10,6 +10,7 @@
 <link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
 <link href="css140307/recommend.css" rel="stylesheet" type="text/css">
 <link href="css140307/shopMore.css" rel="stylesheet" type="text/css">
+<link href="css140307/commodity834.css" rel="stylesheet" type="text/css">
 <script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
@@ -90,7 +91,7 @@
       <img src="images140307/rebateExplain.jpg" /> </div>
     <div class="shopRecommend">
       <h3>为您推荐</h3>
-      <ul class="clearfix">
+      <ul class="commodityUl clearfix">
         <li>
           <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
           <dd>
@@ -171,7 +172,7 @@
             <p class="rebate">返利最高：<em>10%</em></p>
           </dd>
         </li>
-         <li class="bbn">
+        <li class="bbn">
           <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
           <dd>
             <p class="price">¥128.20</p>
@@ -179,7 +180,7 @@
             <p class="rebate">返利最高：<em>10%</em></p>
           </dd>
         </li>
-         <li class="bbn brn">
+        <li class="bbn brn">
           <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
           <dd>
             <p class="price">¥128.20</p>
