--- a/web/search.html
+++ b/web/search.html
@@ -8,9 +8,10 @@
 <link href="css140307/reset.css" rel="stylesheet" type="text/css">
 <link href="css140307/common.css" rel="stylesheet" type="text/css">
 <link href="css140307/categorysFilter.css" rel="stylesheet" type="text/css">
-<link href="css140307/commodity.css" rel="stylesheet" type="text/css">
 <link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
 <link href="css140307/recommend.css" rel="stylesheet" type="text/css">
+<link href="css140307/screen.css" rel="stylesheet" type="text/css">
+<link href="css140307/commodity930.css" rel="stylesheet" type="text/css">
 <script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
@@ -135,109 +136,107 @@
       <a class="prevBtn">prev</a><a class="nextBtn">next</a> </div>
   </div>
   <div class="main w930 fr">
-    <div class="commodityList">
-      <h1>搜索关键字：iphone<span>共2555件宝贝</span></h1>
-      <div class="classifyShop clearfix">
-        <dt class="fl">商城筛选：</dt>
-        <dd class="fl"> <a class="hover" href="#">全部</a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a class="unfoldBtn">展开</a> </dd>
-        <dt class="fl">排序：</dt>
-        <dd class="fl"> <a href="#" class="sort active">相关度排序</a> <a href="#" class="sort arrowDown">价格从高到低</a>
-          <div class="price mr0"><span class="rmb">¥</span>
-            <input value="" class="price-input">
-          </div>
-          -
-          <div class="price"><span class="rmb">¥</span>
-            <input value="" class="price-input">
-          </div>
-          <button type="button" class="price-btn">确定</button>
+    <h1>搜索关键字：iphone<span>共2555件宝贝</span></h1>
+    <div class="screen clearfix">
+      <dt class="fl">商城筛选：</dt>
+      <dd class="fl w820 h28"> <a class="hover" href="#">全部</a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a href="#"> 携程旅行网 </a> <a href="#"> 京东商城 </a> <a href="#"> 易迅网 </a> <a href="#"> 唯品会 </a> <a class="unfoldBtn">展开</a> </dd>
+      <dt class="fl">排序：</dt>
+      <dd class="fl w820 h28"> <a href="#" class="sort active">相关度排序</a> <a href="#" class="sort arrowDown">价格从高到低</a>
+        <div class="price mr0"><span class="rmb">¥</span>
+          <input value="" class="price-input">
+        </div>
+        -
+        <div class="price"><span class="rmb">¥</span>
+          <input value="" class="price-input">
+        </div>
+        <button type="button" class="price-btn">确定</button>
+      </dd>
+    </div>
+    <ul class="module commodityUl clearfix">
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
         </dd>
-      </div>
-      <ul class="module commodityUl clearfix">
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li>
-          <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
-          <dd class="clearfix">
-            <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
-            <p class="price">￥25</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+      <li>
+        <dt class="image"><img src="other140307/image100.jpg" width="200" height="200" /><a class="shop">京东商城</a></dt>
+        <dd class="clearfix">
+          <p class="title"><a href="#">【货到付款全国包邮】酷(Coolpad)8020+ 3G手机酷派 (Coolpach)手机酷炫</a></p>
+          <p class="price">￥25</p>
+          <p class="rebate">返利最高：<em>10%</em></p>
+        </dd>
+      </li>
+    </ul>
+    <div style="display: inline-block; width: 100%;">
+      <ul class="pageNav">
+        <li class="currPage"> <a href="/shopping/list?page=1">1</a> </li>
+        <li> <a href="/shopping/list?page=2">2</a> </li>
+        <li> <a href="/shopping/list?page=3">3</a> </li>
+        <li class="nextPage"> <a href="/shopping/list?page=3"> <span class="arrowRightOrange"></span> </a> </li>
+        <li> <span>共3页</span> </li>
+        <li> <span>到第
+          <input type="text" onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" onkeyup="value=value.replace(/[^\d]/g,'')" class="J_PageNum" size="2" id="page" maxlengh="4">
+          <span>页</span>
+          <input type="button" id="goto" class="J_JumpTo" value="确定">
+          </span> </li>
       </ul>
-      <div style="display: inline-block; width: 100%;">
-        <ul class="pageNav">
-          <li class="currPage"> <a href="/shopping/list?page=1">1</a> </li>
-          <li> <a href="/shopping/list?page=2">2</a> </li>
-          <li> <a href="/shopping/list?page=3">3</a> </li>
-          <li class="nextPage"> <a href="/shopping/list?page=3"> <span class="arrowRightOrange"></span> </a> </li>
-          <li> <span>共3页</span> </li>
-          <li> <span>到第
-            <input type="text" onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" onkeyup="value=value.replace(/[^\d]/g,'')" class="J_PageNum" size="2" id="page" maxlengh="4">
-            <span>页</span>
-            <input type="button" id="goto" class="J_JumpTo" value="确定">
-            </span> </li>
-        </ul>
-      </div>
     </div>
   </div>
 </div>
 <script src="js140307/common.js" language="javascript"></script> 
 <script src="js140307/categorysFilter.js" language="javascript"></script> 
-<script src="js140307/recommend.js" language="javascript"></script> 
-<script src="js140307/commodity.js" language="javascript"></script>
+<script src="js140307/screen.js" language="javascript"></script>
+<script src="js140307/recommend.js" language="javascript"></script>
 </body>
 </html>
