--- a/web/shopList.html
+++ b/web/shopList.html
@@ -10,7 +10,7 @@
 <link href="css140307/shopList.css" rel="stylesheet" type="text/css">
 <link href="css140307/pageNumber.css" rel="stylesheet" type="text/css">
 <link href="css140307/recommend.css" rel="stylesheet" type="text/css">
-<link href="css140307/commodity.css" rel="stylesheet" type="text/css">
+<link href="css140307/screen.css" rel="stylesheet" type="text/css">
 <script src="js140307/jquery-1.8.2.js" language="javascript"></script>
 </head>
 <body>
@@ -72,10 +72,9 @@
 </div>
 <div class="pageMain page clearfix">
   <div class="main w834 fl">
-    <div class="shopList">
       <h1>商家列表<span>共500个商家</span></h1>
-      <div class="classify clearfix">
-        <dd class="fl"> <li><a class="hover" href="#">热门商家</a></li> <li><a href="#"> 综合商城 </a></li> <li><a href="#"> 服装服饰 </a></li> <li><a href="#"> 手机/数码/家电 </a></li> <li><a href="#"> 美容化妆 </a></li> <li><a href="#"> 家居家饰 </a></li> <li><a href="#"> 女性/内衣 </a></li> <li><a href="#"> 母婴/儿童用品 </a></li> <li><a href="#"> 图书音像 </a></li> <li><a href="#"> 鲜花礼品 </a></li> <li><a href="#"> 珠宝首饰 </a></li> <li><a href="#"> 食品/茶叶/酒水 </a></li> <li><a href="#"> 医药健康 </a></li> <li><a href="#"> 成人保健 </a></li> <li><a href="#"> 汽车用品 </a></li> <li><a href="#"> 运动户外 </a></li> <li><a href="#"> 箱包/眼镜/鞋类 </a></li> <li><a href="#"> 团购 </a></li> <li><a href="#"> 电视购物 </a></li> <li><a href="#"> 教育培训 </a></li> <li><a href="#"> 票务旅游 </a></li> <li><a href="#"> 金融理财 </a></li> <li><a href="#"> 网络游戏 </a></li> <li><a href="#"> 娱乐交友 </a></li> <li><a href="#"> 网络服务/其他 </a></li> <li><a href="#"> 名品特卖 </a></li> <li><a href="#"> 奢侈品 </a></li> <a class="unfoldBtn">展开</a> </dd>
+      <div class="screen clearfix">
+        <dd class="fl w794 h56"> <li><a class="hover" href="#">热门商家</a></li> <li><a href="#"> 综合商城 </a></li> <li><a href="#"> 服装服饰 </a></li> <li><a href="#"> 手机/数码/家电 </a></li> <li><a href="#"> 美容化妆 </a></li> <li><a href="#"> 家居家饰 </a></li> <li><a href="#"> 女性/内衣 </a></li> <li><a href="#"> 母婴/儿童用品 </a></li> <li><a href="#"> 图书音像 </a></li> <li><a href="#"> 鲜花礼品 </a></li> <li><a href="#"> 珠宝首饰 </a></li> <li><a href="#"> 食品/茶叶/酒水 </a></li> <li><a href="#"> 医药健康 </a></li> <li><a href="#"> 成人保健 </a></li> <li><a href="#"> 汽车用品 </a></li> <li><a href="#"> 运动户外 </a></li> <li><a href="#"> 箱包/眼镜/鞋类 </a></li> <li><a href="#"> 团购 </a></li> <li><a href="#"> 电视购物 </a></li> <li><a href="#"> 教育培训 </a></li> <li><a href="#"> 票务旅游 </a></li> <li><a href="#"> 金融理财 </a></li> <li><a href="#"> 网络游戏 </a></li> <li><a href="#"> 娱乐交友 </a></li> <li><a href="#"> 网络服务/其他 </a></li> <li><a href="#"> 名品特卖 </a></li> <li><a href="#"> 奢侈品 </a></li> <a class="unfoldBtn">展开</a> </dd>
       </div>
       <ul class="shopListUl clearfix">
         <li>
@@ -559,7 +558,6 @@
           </div>
         </li>
       </ul>
-    </div>
     <div style="display: inline-block; width: 100%;">
       <ul class="pageNav">
         <li class="currPage"> <a href="/shopping/list?page=1">1</a> </li>
@@ -604,5 +602,6 @@
 <script src="js140307/common.js" language="javascript"></script> 
 <script src="js140307/shopList.js" language="javascript"></script> 
 <script src="js140307/recommend.js" language="javascript"></script>
+<script src="js140307/screen.js" language="javascript"></script>
 </body>
 </html>
