#249 top page design updated

--- a/web/index.html
+++ b/web/index.html
@@ -145,57 +145,120 @@
     </div>
     <div id="timeline">
       <h3>最新动态</h3>
-      <ul class="clearfix">
-        <li>
-          <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-        </li>
-        <li>
-          <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-        </li>
-        <li>
-          <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-        </li>
-        <li>
-          <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-        </li>
-        <li>
-          <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-        </li>
-      </ul>
+      <div class="mask">
+        <ul class="clearfix">
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>1000</em>积分 </p>
+          </li>
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>2000</em>积分 </p>
+          </li>
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>3000</em>积分 </p>
+          </li>
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>4000</em>积分 </p>
+          </li>
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
+          </li>
+          <li>
+            <p><span>14896630</span>支付宝兑换<em>6000</em>积分 </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="w615 fl">
     <div id="indexBanner"> <a href="http://www.91jili.com/game/index" class="game" style="opacity: 1;">游戏体验</a> <a href="http://www.91jili.com/marketActivity/index" class="marketActivity" style="opacity: 1;">商家活动</a> <a target="_blank" href="http://www.91wenwen.net/vote/#active" class="vote" style="opacity: 1;">快速问答</a> <a href="http://www.91jili.com/advertiserment/list" class="advertiserment" style="opacity: 1;">体验广告<em>3/27更新</em></a> <a href="http://www.91jili.com/shopping/list" class="shopping" style="opacity: 1;">购物返利</a> </div>
     <div id="task">
       <h3>我的任务列表</h3>
-      <div class="menu"><a class="hover">为您推荐的</a><a>确认中</a><a>已完成</a><a>已拒绝</a></div>
-      <ul class="taskList clearfix">
-        <li><a href="#">
-          <dt>小鸡找米</dt>
-          <dd>最高<em>5888</em>米粒</dd>
-          </a></li>
-        <li class="brn"><a href="#">
-          <dt>广告任务墙</dt>
-          <dd><em>3/27</em>更新</dd>
-          </a></li>
-        <li><a href="#">
-          <dt>各校自主招生网络
-            </dd>
-          <dt><em>800</em>米粒
-            </dd>
-          </a></li>
-        <li class="brn"><a href="#">
-          <dt>去购物</dt>
-          </a></li>
-        <li class="bbn"><a href="#">
-          <dt>91问问快速问答</dt>
-          <dd><em>1</em>米粒</dd>
-          </a></li>
-        <li class="bbn brn"><a href="#">
-          <dt>每日签到</dt>
-          <dd><em>1</em>米粒</dd>
-          </a></li>
-      </ul>
+      <div class="menu"><a class="recommend hover">为您推荐的</a><a class="affirm">确认中</a><a class="finish">已完成</a></div>
+      <div class="mask">
+        <div class="all clearfix">
+          <ul class="taskList clearfix">
+            <li><a href="#">
+              <dt>小鸡找米</dt>
+              <dd>最高<em>5888</em>米粒</dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>广告任务墙</dt>
+              <dd><em>3/27</em>更新</dd>
+              </a></li>
+            <li><a href="#">
+              <dt>各校自主招生网络
+                </dd>
+              <dt><em>800</em>米粒
+                </dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>去购物</dt>
+              </a></li>
+            <li class="bbn"><a href="#">
+              <dt>91问问快速问答</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+            <li class="bbn brn"><a href="#">
+              <dt>每日签到</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+          </ul>
+          <ul class="taskList clearfix">
+            <li><a href="#">
+              <dt>小鸡找米</dt>
+              <dd>最高<em>5888</em>米粒</dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>广告任务墙</dt>
+              <dd><em>3/27</em>更新</dd>
+              </a></li>
+            <li><a href="#">
+              <dt>各校自主招生网络
+                </dd>
+              <dt><em>800</em>米粒
+                </dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>去购物</dt>
+              </a></li>
+            <li class="bbn"><a href="#">
+              <dt>91问问快速问答</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+            <li class="bbn brn"><a href="#">
+              <dt>每日签到</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+          </ul>
+          <ul class="taskList clearfix">
+            <li><a href="#">
+              <dt>小鸡找米</dt>
+              <dd>最高<em>5888</em>米粒</dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>广告任务墙</dt>
+              <dd><em>3/27</em>更新</dd>
+              </a></li>
+            <li><a href="#">
+              <dt>各校自主招生网络
+                </dd>
+              <dt><em>800</em>米粒
+                </dd>
+              </a></li>
+            <li class="brn"><a href="#">
+              <dt>去购物</dt>
+              </a></li>
+            <li class="bbn"><a href="#">
+              <dt>91问问快速问答</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+            <li class="bbn brn"><a href="#">
+              <dt>每日签到</dt>
+              <dd><em>1</em>米粒</dd>
+              </a></li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div id="getMallList">
       <h3>返利商城</h3>
@@ -281,6 +344,22 @@
                 <p class="btn"><a class="goActivity" href="#">去看看</a></p>
               </dd>
             </li>
+            <li>
+              <dt><a href="#"><img src="other140307/image100.jpg" width="494" height="121" /></a></dt>
+              <dd>
+                <p class="title">娇韵的风景的风景特卖4折起</p>
+                <p class="discount">2.1折起</p>
+                <p class="btn"><a class="goActivity" href="#">去看看</a></p>
+              </dd>
+            </li>
+            <li>
+              <dt><a href="#"><img src="other140307/image100.jpg" width="494" height="121" /></a></dt>
+              <dd>
+                <p class="title">娇韵的风景的风景特卖4折起</p>
+                <p class="discount">2.1折起</p>
+                <p class="btn"><a class="goActivity" href="#">去看看</a></p>
+              </dd>
+            </li>
           </div>
         </div>
         <a class="prevBtn">prev</a><a class="nextBtn">next</a>
@@ -336,7 +415,7 @@
         <li><a href="http://www.91jili.com/shopping/list"><img src="other140307/image100.jpg"></a></li>
         <li><a href="http://www.91jili.com/game/index"><img src="other140307/image100.jpg"></a></li>
       </ul>
-      <div class="bannerNumber"><a class="">1</a><a class="">2</a><a class="hover">3</a></div>
+      <div class="bannerNumber"></div>
     </div>
     <div id="news">
       <h3>最新公告</h3>
@@ -411,7 +490,7 @@
   </div>
 </div>
 <script src="js140307/common.js" language="javascript"></script> 
-<script src="js140307/categorys.js" language="javascript"></script>
+<script src="js140307/categorys.js" language="javascript"></script> 
 <script src="js140307/index.js" language="javascript"></script>
 </body>
 </html>
