modify sub pages

--- a/web/help/help1.html
+++ b/web/help/help1.html
@@ -1,6 +1,6 @@
 <ul>
 	<li>
-		<h4>01 去购物返利页面</h4>
+		<h4>01 去22购物返利页面</h4>
 		<p>点击菜单栏的“<span>购物返利</span>”按钮，前往购物返利页面！</p>
 		<div class="helpImage"><img src="other/help/help1_1.jpg" /></div>
 	</li>
