add policy rule

--- a/web/other/agreementText.html
+++ b/web/other/agreementText.html
@@ -100,6 +100,17 @@ body,td,th {
 <p align="left">九、法律适用、管辖与其他 <br />
   1、本协议之效力、解释、变更、执行与争议解决均适用中华人民共和国法律，如无相关法律规定的，则应参照通用国际国内商业惯例和（或）行业惯例。 <br />
   2、因本协议产生之争议，应依照中华人民共和国法律，通过积粒网公司所在地的人民法院进行予以处理。 </p>
+<p align="left">十、个人信息的处理 <br />
+1、积粒网将根据<隐私方针>，谨慎地处理用户的个人信息。<br />
+2、积粒网所取得的个人信息的使用目的如下：<br />
+
+&nbsp;&nbsp;&nbsp;1）以无法特定个人的形式，用于统计数据<br />
+&nbsp;&nbsp;&nbsp;2）用于给用户发送奖品或者邮件<br />
+&nbsp;&nbsp;&nbsp;3）为了保证各类活动抽奖的公正，有效性<br />
+&nbsp;&nbsp;&nbsp;4）改善积粒网所提供的服务以及信息内容的品质<br />
+&nbsp;&nbsp;&nbsp;5）在积粒网新服务开始时面向会员的告知以及诱导<br />
+&nbsp;&nbsp;&nbsp;6）其他经过会员认可的活动<br />
+
 <p align="left">&nbsp;</p>
 <p align="left">&nbsp;</p>
 <p align="right">网曦信息科技（上海）有限公司 <br />
