--- a/web/other/agreementText.html
+++ b/web/other/agreementText.html
@@ -38,7 +38,7 @@ body,td,th {
 <p align="left">三、积粒网服务： <br />
   积粒网注册会员（以下简称会员）可以通过点击积粒网所提供的商家、广告、搜索结果等，产生约定的网上行为，如注册、购物、参加调查问卷、浏览广告等，按照要求完成上述行为，可获得购物返利，积分或礼品的机会，积粒网的积分以&ldquo;米粒&rdquo;为单位。 <br />
   1、用户注册成为积粒网的会员之后，即刻享有积粒网提供的服务。 <br />
-  2、积分或返利的结算：积粒网在收到广告主支付的佣金后，将按照网站中约定的比例或额度计入会员在积粒网的虚拟账户，会员在累计一定的积分后，可以通过积粒网兑换中心申请兑换为支付宝充值、手机费、礼品等，相关税费由会员自行向税务部门申报。 <br />
+  2、积分或返利的结算：积粒网在收到广告主支付的佣金后，将按照网站中约定的比例或额度计入会员在积粒网的虚拟账户，会员在累计一定的积分后，可以通过积粒网兑换中心申请兑换为支付宝充值、手机费、礼品等，相关税费由网站为会员的劳务所得承担代扣代缴义务，向税务部门申报。 <br />
   3、返利方式：积粒网提供支付宝转账、充值手机费、兑换其他网站积分、实物礼品、购物卡等多种兑换途径，如果会员没有出现违规情况，积粒网将在收到会员的兑换申请后按照规定予以兑现。 <br />
   4、积分失效：会员如果在180天内没有积累积分（包括确认中的积分）或消费积分，其积分将会全部失效。<br />
   5、您了解并同意，积粒网有权应政府部门（包括司法及行政部门）的要求，向其提供您在积粒网填写的注册信息和交易纪录等必要信息。如您涉嫌侵犯他人知识产权，则积粒网亦有权在初步判断涉嫌侵权行为存在的情况下，向司法部门提供您必要的身份信息。除非法律法规或相关政府部门另有要求，积粒网将在前述信息披露情况发生后及时向您发出书面通知。 </p>
